--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Mic Toggler</title>
+    <style>
+      body, html {
+       padding: 0px;
+       margin: 0px;
+      }
+      </style>
   </head>
   <body>
     <noscript>
